# rexturl

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  urls.txt
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_details.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
benches/: formatter_benchmark.rs  url_parser_benchmark.rs
src/: config.rs  domain.rs  error.rs  formatter.rs  lib.rs  main.rs  output.rs  parser.rs  processor.rs  url.rs  url_parser.rs
tests/: custom_format_tests.rs  formatting_tests.rs  integration_tests.rs
