[package]
name = "rexturl"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "A simple tool to split urls in their protocol, host, port, path and query parts."
categories = ["command-line-utilities"]
homepage = "https://github.com/vschwaberow/rexturl.git"
repository = "https://github.com/vschwaberow/rexturl.git"
keywords = ["rust", "network", "security", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
atty = "0.2.14"
url = "2.3.1"
