[package]
name = "rexturl"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "A simple tool to split urls in their protocol, host, port, path and query parts."
categories = ["command-line-utilities"]
homepage = "https://github.com/vschwaberow/rexturl.git"
repository = "https://github.com/vschwaberow/rexturl.git"
keywords = ["rust", "network", "security", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["cargo", "env", "derive"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
criterion = "0.5"

[[bench]]
name = "url_parser_benchmark"
harness = false

[[bench]]
name = "formatter_benchmark"
harness = false
